# mergedossier-bench-artifact

./: ARTIFACT_MANIFEST.md  CITATION.cff  CLAIMS_AND_NONCLAIMS.md  DATASET_CARD.md  README.md  REVIEWER_SMOKE_TEST.md  pyproject.toml
docs/: 00_positioning.md  01_paper_plan.md  02_dossier_schema.md  03_annotation_guidelines.md  04_experimental_design.md  05_leaderboard_design.md  06_related_work_seed.md  07_submission_checklist.md  08_annotation_protocol.md  09_seed_corpus_protocol.md  10_real_pilot_plan.md  11_evidence_provenance.md  11_user_next_steps.md  12_artifact_evaluation.md  12_instrument_validation.md  13_dataset_card.md  13_pivot_without_second_annotator.md  14_reframing_to_evidence_availability.md  14_release_manifest.md  15_claims_and_nonclaims.md  15_population_study_protocol.md  16_raw_frame_release_policy.md  17_single_operator_submission_strategy.md
examples/: toy_annotation.json  toy_merge_dossier.json  toy_pr_instance.json
outputs/: abstract_word_count_20260618_final.json
paper/: main.tex
schemas/: annotation.schema.json  github_pr_raw.schema.json  merge_dossier.schema.json  pr_instance.schema.json  score_report.schema.json
scripts/: analyze_external_audit_slice.py  bootstrap_env.sh  build_80_percent_push_packet.py  build_acceptance_probability_gap_report.py  build_adjudication_sheet.py  build_ai_assistance_disclosure_packet.py  build_and_check_paper_layout.py  build_anonymous_release_zip.py  build_dependency_audit_results.py  build_dependency_audit_sheet.py  build_external_audit_intake_report.py  build_external_audit_parallel_packets.py  (+46 more)
(+178 files in other folders)
